# bare_metal_modulo

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
src/: lib.rs
